crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/inherited_modifier_variable_clash/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[DeclarationError 9097] Error: Identifier already declared.
    ╭─[input.sol:11:5]
    │
 11 │     uint public m;
    │     ──────┬──────  
    │           ╰──────── Error occurred here.
────╯

[TypeError 1456] Error: Override changes modifier to public state variable.
    ╭─[input.sol:11:5]
    │
 11 │     uint public m;
    │     ──────┬──────  
    │           ╰──────── Error occurred here.
────╯
